feat: implements artifact module
