# backend/src/modules/artifacts/types/dtos/requests/create-artifact-req.dto.ts
@@ -1,0 +1,35 @@
+import { ApiProperty } from "@nestjs/swagger"
+import { IsNotEmpty, IsString } from "class-validator"
+
+export class CreateArtifactProjectReqDto {
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    name: string
+}
+
+export class CreateArtifactProjectParamsReqDto {
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    projectId: string
+}
+
+export class CreateArtifactDeliverableReqDto {
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    name: string
+
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    groupId: string
+}
+
+export class CreateArtifactDeliverableParamsReqDto {
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    deliverableId: string
+}
