# backend/src/modules/artifacts/types/dtos/requests/update.req.dto.ts
@@ -1,0 +1,14 @@
+import { ApiProperty } from "@nestjs/swagger"
+import { IsNotEmpty, IsString } from "class-validator"
+
+export class UpdateByIdArtifactReqDto {
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    id: string
+
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    deliverableId: string
+}
